删除工程文件